<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.DetailsFragment"
    tools:background="@color/primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_header_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_back"
            android:contentDescription=" "
            android:paddingStart="@dimen/details_back_button_padding"
            android:paddingEnd="@dimen/details_back_button_padding"
            android:backgroundTint="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_playlist_add"
            android:contentDescription=" "
            android:paddingStart="@dimen/details_back_button_padding"
            android:paddingEnd="@dimen/details_menu_icons_padding"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toStartOf="@id/like_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_heart_stroke"
            android:contentDescription=" "
            android:backgroundTint="@color/transparent"
            android:paddingStart="@dimen/details_menu_icons_padding"
            android:paddingEnd="@dimen/details_back_button_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/details_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/details_horizontal_margin"
            android:paddingEnd="@dimen/details_horizontal_margin"
            android:paddingTop="@dimen/details_picture_top_margin"
            android:paddingBottom="@dimen/details_bottom_margin"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/details_picture_width"
                android:layout_height="@dimen/details_picture_height"
                app:cardCornerRadius="@dimen/details_picture_corner_radius"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movie_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/h2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/details_section_margin"
                tools:text="The Super Mario Bros Movie"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_regular"
                    android:textColor="@color/gray"
                    tools:text="Action, Animation"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/point_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_regular"
                    android:textColor="@color/gray"
                    android:paddingStart="@dimen/details_movie_type_duration_separator_padding"
                    android:paddingEnd="@dimen/details_movie_type_duration_separator_padding"
                    android:text="@string/details_separator"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_regular"
                    android:textColor="@color/gray"
                    tools:text="1h30"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_section_margin">

                <ProgressBar
                    android:id="@+id/rate_progress_indicator"
                    style="@android:style/Widget.ProgressBar.Inverse"
                    android:layout_width="@dimen/details_rate_indicator_size"
                    android:layout_height="@dimen/details_rate_indicator_size"
                    android:max="100"
                    android:min="0"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/rate_progress_bar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="75%"
                    app:layout_constraintTop_toTopOf="@id/rate_progress_indicator"
                    app:layout_constraintStart_toStartOf="@id/rate_progress_indicator"
                    app:layout_constraintEnd_toEndOf="@id/rate_progress_indicator"
                    app:layout_constraintBottom_toBottomOf="@id/rate_progress_indicator" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/details_rate_button_start_margin"
                    android:backgroundTint="@color/primary_variant"
                    app:cardCornerRadius="@dimen/details_rate_button_corner_radius"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rate_progress_indicator">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/rate_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_star_stroke"
                        android:contentDescription=" "
                        android:padding="@dimen/details_rate_button_inner_padding"
                        android:backgroundTint="@color/transparent"
                        app:layout_constraintStart_toEndOf="@id/rate_progress_indicator"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/movie_trailer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_variant"
                    android:paddingVertical="@dimen/details_rate_button_inner_padding"
                    android:paddingHorizontal="@dimen/details_trailer_button_horizontal_padding"
                    android:textSize="@dimen/body_regular"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/movie_trailer"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/ic_player"
                    android:drawablePadding="@dimen/details_trailer_button_inner_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/details_section_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_regular"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/synopsis"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/movie_description_bg"
                    android:textSize="@dimen/body_regular"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    tools:text="@string/random_text"
                    android:layout_marginTop="@dimen/details_description_top_margin"
                    android:paddingStart="@dimen/details_description_start_padding"
                    tools:ignore="RtlSymmetry" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_section_margin"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_regular"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/headliners"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>